--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-# spring.datasource.url=jdbc:postgresql://localhost:5432/bettydemissie
-# spring.datasource.username=
-# spring.datasource.passowrd=
-# spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
-# spring.jpa.properties.hibernate.format_sql=true
+server.port = 8081
